syntax = "proto3";

option java_multiple_files = true;
option java_package = "co.appointment.grpc";
option java_outer_classname = "BranchProto";

service BranchService {
  rpc ProcessBranchById(GetBranchByIdRequest) returns (GetBranchResponse) {}
}

message GetBranchByIdRequest {
  int32 id = 1;
}

message GetBranchResponse {
  int32 id = 1;
  string name = 2;
  string street_no = 3;
  string address_line_1 = 4;
  string address_line_2 = 5;
  string city = 6;
  string province = 7;
  string postal_code = 8;
  string email_address = 9;
  string fax_number = 10;
  string land_line = 11;
}


